<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactListActivity">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout4">
        <Switch
                android:text="@string/toggle_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/switch_delete_contacts" android:layout_weight="1"
                android:layout_marginRight="128dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                android:layout_marginEnd="128dp"/>
        <Button
                android:text="@string/button_new"
                android:layout_width="27dp"
                android:layout_height="wrap_content" android:id="@+id/button_new_contact" android:layout_weight="1"
                android:layout_marginLeft="16dp" android:layout_marginRight="32dp" android:layout_marginEnd="32dp"
                android:layout_marginStart="16dp"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" android:id="@+id/recycler_view_contacts"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/navbar_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/linearLayout">

        <ImageButton
                android:id="@+id/imageButtonList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_display_a_list_of_contacts"
                app:srcCompat="@drawable/contactlisticon"/>

        <ImageButton
                android:id="@+id/imageButtonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_display_contacts_on_a_map"
                app:srcCompat="@drawable/mapicon"/>

        <ImageButton
                android:id="@+id/imageButtonSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/button_to_access_app_settings"
                app:srcCompat="@drawable/settingsicon"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>