<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textView_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView_city"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_city"/>
    <TextView
            android:id="@+id/textView_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_state"
            app:layout_constraintStart_toEndOf="@+id/textView_state"/>
    <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:backgroundTint="@color/deleteButtonBackground"/>
    <TextView
            android:id="@+id/textView_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/textView_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_address" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_homephone_text"/>
    <TextView
            android:id="@+id/textView_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_homephone_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_cellphone_text" android:text="@string/text_home_phone"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_homephone"
            android:layout_marginStart="4dp" app:layout_constraintStart_toEndOf="@+id/textView_homephone_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_homephone_text"/>
    <TextView
            android:text="@string/text_cell_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_cellphone_text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView_email"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_cellphone"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_cellphone_text" android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@+id/textView_cellphone_text"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_email"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_date" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_date"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>